# booSer

./: .gitignore  CMakeLists.txt  README.md  TestClass.h  loadGzip.cxx  loadPba.cxx  loadText.cxx  loadXML.cxx  storeGzip.cxx  storePba.cxx  storeText.cxx  storeXML.cxx  test_embedded.cxx  test_embedded.h  test_embedded_serialize.icc  test_gzipArchive.cxx  test_gzipArchive.h  test_xmlOArchive.cxx  test_xmlOArchive.h
python/: makeSerial.py
